# oop

lab3/: CMakeLists.txt
lab3/src/: CMakeLists.txt  main.cpp  point.cpp  point.h
lab4/: CMakeLists.txt
lab4/src/: CMakeLists.txt  circle.cpp  circle.h  ellipse.cpp  ellipse.h  line.cpp  line.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  triangle.cpp  triangle.h
